--- a/jdbc.properties
+++ b/jdbc.properties
@@ -6,6 +6,7 @@ jdbc.main.driverClass=oracle.jdbc.driver.OracleDriver
 jdbc.main.jdbcUrl=jdbc:oracle:thin:@10.4.1.95:1521:orcl
 jdbc.main.user=tnms_portal_hb
 jdbc.main.password=tnms_portal_hb
+foa=tnms_portal_hb
 #mysql
 #jdbc.main.driverClass=com.mysql.jdbc.Driver
 #jdbc.main.jdbcUrl=jdbc:mysql://localhost:3306/jieyuechina
